@@ -5,6 +5,7 @@ use warnings;
 
 use base 'Devel::Declare::MethodInstaller::Simple';
 use Method::Signatures::Parser;
+use Data::Alias;
 
 our $VERSION = '20100730';
 
@@ -15,13 +16,6 @@ sub DEBUG {
 
     require Data::Dumper;
     print STDERR "DEBUG: ", map { ref $_ ? Data::Dumper::Dumper($_) : $_ } @_;
-}
-
-
-# For some reason Data::Alias must be loaded at our own compile time.
-our $HAVE_DATA_ALIAS;
-BEGIN {
-    $HAVE_DATA_ALIAS = eval { require Data::Alias; } ? 1 : 0;
 }
 
 
@@ -154,10 +148,6 @@ reference.
 
     my @bar = (1,2,3);
     Stuff->add_one(\@bar);  # @bar is now (2,3,4)
-
-This feature requires L<Data::Alias> to be installed.
-Method::Signatures does not depend on it because it does not currently
-work after 5.10.
 
 
 =head3 Invocant parameter
@@ -587,15 +577,6 @@ sub inject_for_sig {
 
     # Handle \@foo
     if ( $sig->{is_ref_alias} or $sig->{traits}{alias} ) {
-        if( !$HAVE_DATA_ALIAS ) {
-            require Carp;
-            # I couldn't get @CARP_NOT to work
-            local %Carp::CarpInternal = %Carp::CarpInternal;
-            $Carp::CarpInternal{"Devel::Declare"} = 1;
-            $Carp::CarpInternal{"Devel::Declare::MethodInstaller::Simple"} = 1;
-            $Carp::CarpInternal{"Method::Signatures"} = 1;
-            Carp::croak("The alias trait was used on $sig->{var}, but Data::Alias is not installed");
-        }
         push @code, sprintf 'Data::Alias::alias(%s = %s);', $lhs, $rhs;
     }
     # Handle "is ro"
